[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "tonggraph"
version = "0.1.0"
description = "A lightweight embedded graph compute database for large sparse graph networks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "BIGAI TongAgents Team" }]

[tool.maturin]
features = ["extension-module"]
module-name = "tonggraph._tonggraph"
python-source = "python"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.30.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
