[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "tonggraph"
version = "0.2.0-alpha.1"
description = "A lightweight embedded graph compute database for large sparse graph networks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "BIGAI TongAgents Team" }]
keywords = ["graph", "graph-compute", "agent-memory", "belief-propagation", "pyo3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://bigai-nlco.github.io/TongGraph/"
Documentation = "https://bigai-nlco.github.io/TongGraph/"
Repository = "https://github.com/bigai-nlco/TongGraph"
Issues = "https://github.com/bigai-nlco/TongGraph/issues"

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "pydantic>=2",
    "PyYAML>=6",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
tonggraph-server = "tonggraph.server.cli:main"

[tool.maturin]
features = ["extension-module"]
module-name = "tonggraph._tonggraph"
python-source = "python"

[dependency-groups]
dev = [
    "httpx>=0.28",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.30.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
